# SwePub2Python

./: README.md  config.py  count-lines-in-swepub.py  create_kubernettes_article_job_and_watch_the_log.sh  export_subjects_from_articles.py  extract_articles_from_swepub.py  pyproject.toml  requirements.txt  swepub2python.py
helpers/: caching.py  dataframe.py  util.py  wdqs.py
models/: extractor.py  iso.py  swedish_higher_education_authority.py
models/swepub/: __init__.py  affiliation.py  article.py  contributor.py  dataframe.py  language.py  subject.py
